[tool.poetry]
name = "jsconf"
version = "1.3.0"
description = "json save config - это библиотека легкого задания конфигурационных файлов"
authors = ["iHelper <pettorr.lu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jjson = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
